# personal-website-v3

./: Cargo.toml  tailwind.config.js  watch.sh
private/: cert.pem  key.pem  socials.ron
public/public/: node_sound_app-d6954ca635c17dae.js  tw.css
src/: main.rs  types.rs
templates/: 404.html  base.html  header_base.html  main.html  sound.html
