[package]
name = "personal-website-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls", "tokio-rustls"] }
axum-server-dual-protocol = "0.7.0"
memory-serve = "0.6.0"
ron = "0.8.1"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = "0.12.2"
serde = { version = "1.0.188", features = ["derive"] }
lazy_static = "1.5.0"
lettre_email = "0.9.4"
dotenv = "0.15.0"
